# Productivity-Agent

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
data/: metrics.json  reminders.json  tasks.json  user_preferences.json
deployment/: DEPLOYMENT.md  DockerFile
docs/: setup-guide.md
examples/: example_1_daily_tasks.py  example_2_project_planning.py  example_3_habit_tracking.py
notebooks/: 01_quick_start.ipynb  kaggle_ui_in_repo.ipynb
src/: __init__.py  main.py
src/agents/: collector_agent.py  orchestrator.py  planner_agent.py  priority_agent.py  reflection_agent.py  reminder_agent.py
src/evaluation/: __init__.py  plan_evaluator.py  test_scenarios.py
src/memory/: __init__.py  context_engineer.py  memory_bank.py  session_manager.py
src/observability/: __init__.py  logger.py  metrics.py  tracer.py
src/personal_productivity_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tools/: __init__.py  habit_analyzer.py  mcp_tools.py  quality_scorer.py  search_tool.py  time_estimator.py
src/utils/: config.py  helpers.py
tests/: test_agents.py
ui/: gradio_app.py  gradio_app.py.bak
